--- a/paper/mathematical_appendix_new.tex
+++ b/paper/mathematical_appendix_new.tex
@@ -17,9 +17,9 @@ where $C_{\mathrm{FCF}}$ derives from $(\overline{\varphi},\overline{\kappa},\ov
 \end{align}
 
 \textbf{Step 3: EBITDA linearization.} From first-order Taylor remainder bounds:
-\begin{align}
+\begin{align>
 \epsilon_{\text{EBITDA}}(t) &\leq \text{EBITDA}_t (|\delta g| \cdot t + |\delta \kappa|)
-\end{align}
+\end{align>
 
 \textbf{Step 4: Ratio bounds.} Using ratio perturbation inequality and ex-ante lower bound $\underline{I}_t > 0$:
 \begin{align}
